WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307495
Paramount+ live TV has flashing buffering icon while playing when MediaSourceUseRemoteAudioVideoRenderer is turned on
https://bugs.webkit.org/show_bug.cgi?id=307495
Summary
Paramount+ live TV has flashing buffering icon while playing when MediaSource...
Jean-Yves Avenard [:jya]
Reported
2026-02-10 16:45:06 PST
Steps to reproduce: 1. Make sure `MediaSourceUseRemoteAudioVideoRenderer` preference is turned on, if not, set it to true and restart browser (Feature Flag = MSE player uses GPU renderer) 2. Go to paramountplus.com 3. Watch something live (I was watching Arsenal vs Chelsea) 4. Observe buffering
rdar://169654471
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2026-02-10 16:49:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58353
EWS
Comment 2
2026-02-10 23:35:22 PST
Committed
307240@main
(8ed662421aad): <
https://commits.webkit.org/307240@main
> Reviewed commits have been landed. Closing PR #58353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug