Paramount+ live TV has flashing buffering icon while playing when MediaSourceUseRemoteAudioVideoRenderer is turned on https://bugs.webkit.org/show_bug.cgi?id=307495 rdar://169654471

Reviewed by Eric Carlson.

The currentTime when a RemoteAudioVideoRenderer is in use was only updated every 200ms.
ParamountPlus video player often checks (about every 130-150ms) the value of currentTime
and if the value didn't change between two checks will make their spinner show.

We instead update the value of currentTime every 100ms, similar to how often
the MediaPlayerPrivateRemote retrieves the currentTime update from the GPU process.

Manually verified.

* Source/WebKit/GPUProcess/media/RemoteAudioVideoRendererProxyManager.cpp:
(WebKit::RemoteAudioVideoRendererProxyManager::create):

Canonical link: https://commits.webkit.org/307240@main